force-app/main/default/objects/OLA_Billing__c/OLA_Billing__c.object-meta.xml
<CustomObject>
    <label>OLA Billing</label>
    <nameField>
        <displayFormat>OLA_Bill-{0000}</displayFormat>
        <label>OLA Billing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OLA Billing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>