force-app/main/default/objects/OLA_Billing__c/fields/Additional_Comment__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comment__c</fullName>
    <label>Additional Comment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>