force-app/main/default/objects/OLA_Billing__c/fields/Billed_Trip_Duration__c.field-meta.xml
<CustomField>
    <fullName>Billed_Trip_Duration__c</fullName>
    <label>Billed Trip Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>