force-app/main/default/objects/OLA_Billing__c/fields/Booking_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Booking_Created_By__c</fullName>
    <label>Booking Created By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>