force-app/main/default/objects/OLA_Billing__c/fields/Budget_Override_Policy__c.field-meta.xml
<CustomField>
    <fullName>Budget_Override_Policy__c</fullName>
    <label>Budget Override Policy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>