force-app/main/default/objects/OLA_Billing__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>