force-app/main/default/objects/OLA_Billing__c/fields/Commision_GST__c.field-meta.xml
<CustomField>
    <fullName>Commision_GST__c</fullName>
    <label>Commision GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>