force-app/main/default/objects/OLA_Billing__c/fields/Commission_Base_Cost__c.field-meta.xml
<CustomField>
    <fullName>Commission_Base_Cost__c</fullName>
    <label>Commission Base Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>