force-app/main/default/objects/OLA_Billing__c/fields/Custom_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_2__c</fullName>
    <label>Custom Field 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>