force-app/main/default/objects/OLA_Billing__c/fields/Driver_Base_Cost__c.field-meta.xml
<CustomField>
    <fullName>Driver_Base_Cost__c</fullName>
    <label>Driver Base Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>