force-app/main/default/objects/OLA_Billing__c/fields/Employee_Band__c.field-meta.xml
<CustomField>
    <fullName>Employee_Band__c</fullName>
    <label>Employee Band</label>
    <length>30</length>
    <type>Text</type>
</CustomField>