force-app/main/default/objects/OLA_Billing__c/fields/Employee_Base_Location__c.field-meta.xml
<CustomField>
    <fullName>Employee_Base_Location__c</fullName>
    <label>Employee Base Location</label>
    <type>TextArea</type>
</CustomField>