force-app/main/default/objects/OLA_Billing__c/fields/Employee_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Employee_Cost_Center__c</fullName>
    <label>Employee Cost Center</label>
    <length>30</length>
    <type>Text</type>
</CustomField>