force-app/main/default/objects/OLA_Billing__c/fields/Employee_Designation__c.field-meta.xml
<CustomField>
    <fullName>Employee_Designation__c</fullName>
    <label>Employee Designation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>