force-app/main/default/objects/OLA_Billing__c/fields/Employee_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Phone_Number__c</fullName>
    <label>Employee Phone Number</label>
    <type>Phone</type>
</CustomField>