force-app/main/default/objects/OLA_Billing__c/fields/Expense_Code__c.field-meta.xml
<CustomField>
    <fullName>Expense_Code__c</fullName>
    <label>Expense Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>