force-app/main/default/objects/OLA_Billing__c/fields/Extra_KM_Charge_Case__c.field-meta.xml
<CustomField>
    <fullName>Extra_KM_Charge_Case__c</fullName>
    <label>Extra KM/Charge Case</label>
    <length>50</length>
    <type>Text</type>
</CustomField>