force-app/main/default/objects/OLA_Billing__c/fields/GD_Number__c.field-meta.xml
<CustomField>
    <fullName>GD_Number__c</fullName>
    <label>GD Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>