force-app/main/default/objects/OLA_Billing__c/fields/Guest_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_Name__c</fullName>
    <label>Guest Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>