force-app/main/default/objects/OLA_Billing__c/fields/Guest_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Guest_Phone_Number__c</fullName>
    <label>Guest Phone Number</label>
    <type>Phone</type>
</CustomField>