force-app/main/default/objects/OLA_Billing__c/fields/KK_Tax__c.field-meta.xml
<CustomField>
    <fullName>KK_Tax__c</fullName>
    <label>KK Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>