force-app/main/default/objects/OLA_Billing__c/fields/Manager_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email_Address__c</fullName>
    <label>Manager Email Address</label>
    <type>Email</type>
</CustomField>