force-app/main/default/objects/OLA_Billing__c/fields/Ola_Ride_Book_Id__c.field-meta.xml
<CustomField>
    <fullName>Ola_Ride_Book_Id__c</fullName>
    <label>Ride Booking ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>