force-app/main/default/objects/OLA_Billing__c/fields/Operator_State__c.field-meta.xml
<CustomField>
    <fullName>Operator_State__c</fullName>
    <label>Operator State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>