force-app/main/default/objects/OLA_Billing__c/fields/Override_Policy__c.field-meta.xml
<CustomField>
    <fullName>Override_Policy__c</fullName>
    <label>Override Policy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>