force-app/main/default/objects/OLA_Billing__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <label>Override Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>