force-app/main/default/objects/OLA_Billing__c/fields/Pick_Location__c.field-meta.xml
<CustomField>
    <fullName>Pick_Location__c</fullName>
    <label>Pick Location</label>
    <length>60</length>
    <type>Text</type>
</CustomField>