force-app/main/default/objects/OLA_Billing__c/fields/Rental_Package__c.field-meta.xml
<CustomField>
    <fullName>Rental_Package__c</fullName>
    <label>Rental Package</label>
    <length>30</length>
    <type>Text</type>
</CustomField>