force-app/main/default/objects/OLA_Billing__c/fields/SB_Tax__c.field-meta.xml
<CustomField>
    <fullName>SB_Tax__c</fullName>
    <label>SB Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>