force-app/main/default/objects/OLA_Billing__c/fields/User_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Email_Id__c</fullName>
    <label>User Email Id</label>
    <type>Email</type>
</CustomField>