force-app/main/default/objects/OLA_Billing__c/fields/Waypoints_Location__c.field-meta.xml
<CustomField>
    <fullName>Waypoints_Location__c</fullName>
    <label>Waypoints Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>